# vaeg

./: .clang-format  .clang-format-ignore  .git-blame-ignore-revs  .gitattributes  .gitignore  AGENTS.md  BREAKPOINT.C  BREAKPOINT.H  BUILD.md  CHANGES.20260713.md  CMakeLists.txt  CMakePresets.json  KEYSTAT.TBL  MILESTONE_RENUMBERING.md  OPRECORD.C  PCCORE.C  PCCORE.H  README.md  breakpoint.c  breakpoint.h  calendar.c  clockscale.h  common.h  debugsub386.c  keystat.c  keystat.h  keystat.tbl  nevent.c  nevent.h  np2ver.h  oprecord.c  oprecord.h  pccore.c  pccore.h  readme.txt  statsave.c  statsave.h  statsave.tbl  timing.c  timing.h
BIOS/: BIOS0C.C  BIOS18.C  bios.c  bios0c.c  bios18.c  bios19.c  bios1b.c  keytable.res  sxsibios.c
BIOSVA/: BIOSVA.C  biosva.c  biosva.h
CBUS/: ATAPICMD.C  BOARD26K.C  IDEIO.C  SASIIO.C  amd98.c  atapicmd.c  board14.c  board26k.c  ideio.c  mpu98ii.c  mpu98ii.h  pcm86io.c  sasiio.c  scsicmd.c  scsiio.c  scsiio.h
CPUCVA/: GVRAMVA.C  GVRAMVA.c  Z80.h  Z80c.cpp  Z80c.h  Z80diag.cpp  Z80if.h  types.h  z80.h  z80c.cpp  z80c.h  z80diag.cpp  z80diag.h  z80if.h
CPUXVA/: MEMORYVA.X86
FDD/: FDD_D88.C  FDD_XDF.C  SXSI.H
FONT/: FONTFM7.C  FONTX1.C  FONTX68K.C
GENERIC/: DIPSWBMP.H  HOSTDRVS.C  HOSTDRVS.H  KEYDISP.C  SOFTKBD3.RES
HLP/: dipsw.html  faqwin.html  fdd1.html  fdd2.html  how2use2.html  how2use3.html  how2use4.html  how2use7.html  how2use8.html  menu.html  mpucfg.html  pc98x1.html  replay.html  scrchip.html  scrvideo.html  sercom1.html  snd14.html  snd26k.html  sndboard.html  sndjoy.html  sndmix.html  sndspb.html  soundid.html  syssetup.html  tools.html  toolwin.html  vermouth.html  webpage.html
I286A/: CPUCORE.H
I286X/: CPUCORE.H  EGCMEM.X86  MEMORY.X86
IO/: BMSIO.C  EGC.C  FDC.H  FDD320.C  MOUSEIF.C  PCIDEV.C  PCIDEV.H  bmsio.c  bmsio.h  cgrom.c  crtc.c  dmac.c  dmac.h  egc.c  epsonio.c  fdc.c  fdc.h  fdd320.c  gdc.c  gdc_sub.c  iocore.c  iocore.h  mouseif.c  mouseif.h  np2sysp.c  np2vasup.c  pcidev.c  pcidev.h  pic.c  pic.h  pit.c  pit.h  serial.c  serial.h  upd4990.h
IOVA/: BOARDSB2.C  CGROMVA.C  CGROMVA.H  GACTRLVA.C  I8255.C  I8255.H  IOCOREVA.C  MOUSEIFVA.H  SUBSYSTEM.CPP  SYSPORTVA.C  SYSPORTVA.H  TSP.H  bkupmemva.c  bkupmemva.h  boardsb2.c  boardsb2.h  cgromva.c  cgromva.h  fdsubsys.c  gactrlva.c  gactrlva.h  i8255.c  i8255.h  iocoreva.c  memctrlva.c  mouseifva.c  mouseifva.h  sgp.c  sgp.h  subsystem.cpp  subsystem.h  subsystemif.c  subsystemif.h  subsystemmx.c  sysportva.c  sysportva.h  tsp.c  tsp.h  upd9002.h  va91.c  (+3 more)
MacOS9/: Carbon.r  DOSIO.CPP  DOSIO.H  FONTMNG.CPP  MACKBD.CPP  NP2.CPP  README.TXT  SYSMNG.H
Mona/: DOSIO.C  DOSIO.H  mona.dsp  mona.dsw
SOUND/: ADPCMC.C  FMBOARD.C  FMBOARD.H  PCM86C.C
VRAM/: SCRNSAVE.C  SDRAW.MCR  maketext.c  maketext.h  maketgrp.c  palettes.c  palettes.h  scrnbmp.c  scrndraw.c  scrnsave.c  sdraw.mcr  sdrawex.mcr  sdrawq16.c
VRAMVA/: MAKEGRPHVA.C  MAKESPRVA.C  MAKETEXTVA.C  SDRAWVA.C  SDRAWVA.H  makegrphva.c  makesprva.c  maketextva.c  palettesva.h  scrndrawva.c  scrndrawva.h  sdrawva.c  sdrawva.h
Win9x/: DD2.CPP  INI.CPP  JULIET.CPP  NP2.CPP  NP2.RC  README.TXT  SCRNMNG.CPP  SCRNMNG.H  SSTPMSG.CPP  TOOLWIN.RES  WINKBD.CPP  board118.c  cmmidi.cpp  compiler.h  dosio.cpp  dosio.h  ini.cpp  juliet.cpp  makefile  menu.cpp  menu.h  mousemng.cpp  np2.cpp  np2.dsp  np2.h  np2.rc  np2.vcproj  np2.vcxproj  np2arg.cpp  np2rc.h  np2res.rc  pcifunc.h  readme.txt  scrnmng.cpp  scrnmng.h  soundmng.cpp  soundmng.h  sstp.cpp  sstpmsg.cpp  sysmng.h  (+6 more)
Win9xC/: DOSIO.H  NP2.CPP  SCRNMNG.CPP  SCRNMNG.H  TRACE.CPP  WINKBD.CPP  dosio.h  fontmng.cpp  np2.cpp  np2.rc  np2arg.cpp  np2c.dsp  np2c.dsw  scrnmng.cpp  scrnmng.h  soundmng.cpp  sysmng.h  trace.cpp  winkbd.cpp
WinCE/: DOSIO.CPP  DOSIO.H  FONTMNG.CPP  INI.CPP  SCRNMNG.CPP  SOUNDMNG.CPP  TASKMNG.CPP  WINKBD.CPP  np2.dsp  np2.dsw  np2ppcv.vcp  np2ppcv.vcw  np2sig3.vcp  np2sig3.vcw
accessories/: bin2txt.dsp  lzxpack.dsp
assets/: NOTICE.md
bios/: bios.c  bios1b.c  rsbios.h
biosva/: biosva.c
cbus/: board118.c  board14.c  board26k.c  board86.c  boardspb.c  boardx2.c  cbuscore.c  pcm86io.c  sasiio.c  scsicmd.c  scsicmd.h  scsiio.c  scsiio.tbl
cmake/: embed_binary.cmake  mingw-w64-x86_64.cmake
common/: codecnv.c  lstarray.c  milstr.c  milstr.h  profile.c  profile.h  strres.c  strres.h  textfile.c  textfile.h  wavefile.c  wavefile.h
cpucva/: gvramva.c  gvramva.h  memoryva.c  memoryva.h  types.h  z80.h  z80_bus.h  z80_core.cpp  z80_core.h  z80_disasm.cpp  z80_disasm.h  z80_legacy_state.cpp  z80_legacy_state.h  z80_registers.h  z80c.cpp  z80c.h  z80diag.cpp  z80diag.h  z80diag_bridge.cpp  z80diag_bridge.h  z80if.h
cpuxva/: memoryva.h  memoryva.x86
docs/: build-np2dsp-inventory.md  charset-policy.md  phase1-clang-format-plan.md  phase1-inventory.md  phase1-missing-legacy-items.md  phase1-rename-plan.md  windows-vc2008-baseline.md
embed/: vrammix.c
fdd/: d88head.h  diskdrv.c  fdd_d88.c  fdd_mtr.c  fdd_mtr.h  fdd_xdf.c  fddfile.c  fddfile.h  newdisk.c  newdisk.h  sxsi.c  sxsi.h
font/: font.c  font.h  fontfm7.c  fontmake.c  fontpc88.c  fontpc98.c  fontv98.c  fontx1.c  fontx68k.c
generic/: cmjasts.c  cmver.c  cmver.h  dipswbmp.h  hostdrv.c  hostdrv.tbl  hostdrvs.c  hostdrvs.h  keydisp.c  keydisp.res  np2info.c  softkbd.res  softkbd3.res  unasm.c
help/: about.html  aboutva.html  calendar.html  cfgdlg.html  common.css  device.html  dosmem.html  emulate.html  faq.html  harddisk.html  how2use1.html  how2use5.html  how2use6.html  index.html  keyctrl.html  newfdd.html  newhdd.html  np2.hhc  np2.hhk  np2.hhp  np2help.html  other.html  othercfg.html  screen.html  scrtiming.html  ser9861a.html  ser9861b.html  ser9861k.html  snd86.html  spec.html  sysmenu.html  termsofuse.html  toolskin.html  vermouthic.html
hlp/: about.html  aboutva.html  calendar.html  cfgdlg.html  common.css  device.html  dipsw.html  dosmem.html  emulate.html  faq.html  faqwin.html  fdd1.html  fdd2.html  harddisk.html  how2use1.html  how2use2.html  how2use3.html  how2use4.html  how2use5.html  how2use6.html  how2use7.html  how2use8.html  index.html  keyctrl.html  menu.html  (+37 more)
(+650 files in other folders)
